force-app/main/default/objects/Order/fields/JKLL_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>JKLL_OrderNumber__c</fullName>
    <externalId>true</externalId>
    <label>JKLL_OrderNumber</label>
    <length>16</length>
    <type>Text</type>
</CustomField>