force-app/main/default/objects/Order/fields/Orl_Total_with_Discount__c.field-meta.xml
<CustomField>
    <fullName>Orl_Total_with_Discount__c</fullName>
    <label>Total with Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>