force-app/main/default/objects/Order/fields/Return_Order__c.field-meta.xml
<CustomField>
    <fullName>Return_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>